--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shopstyle-sdk-nodejs",
-  "version": "1.0.3",
+  "name": "shopstyle-sdk",
+  "version": "1.0.0",
   "description": "Node access to the Shopstyle API",
   "main": "index.js",
   "scripts": {
