--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
   },
   "homepage": "https://github.com/PopSugar/shopstyle-sdk-nodejs#readme",
   "devDependencies": {
-    "eslint": "^3.7.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^2.0.1",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.2.0s",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.6.0",
     "istanbul": "^0.4.5",
     "jasmine": "^2.5.2"
   },
@@ -45,7 +45,7 @@
   },
   "dependencies": {
     "node-cache": "^4.1.0",
-    "request": "^2.75.0",
+    "request": "^2.78.0",
     "request-promise": "^4.1.1"
   }
 }
