--- a/package.json
+++ b/package.json
@@ -44,9 +44,7 @@
     "rules": {}
   },
   "dependencies": {
-    "bluebird": "^3.4.7",
-    "node-cache": "^4.1.0",
-    "request": "^2.78.0",
-    "request-promise": "^4.1.1"
+    "axios": "^0.16.2",
+    "cachios": "^1.0.6"
   }
 }
